Добавлен новый алгоритм knn, генерация файлов с данными

--- a/knn_metro.ipynb
+++ b/knn_metro.ipynb
@@ -23,7 +23,7 @@
     "import os\n",
     "\n",
     "# Текущий каталог где находятся файлы\n",
-    "FILES_DIR = \"C:\\\\Projects\\\\knn\"\n",
+    "FILES_DIR = \"C:\\\\Projects\\\\KNN\"\n",
     "\n",
     "# stations.txt содержит данные по станциям на линиях метро, а также соседние станции\n",
     "# Сначала заполняем матрицу смежности для вершин на линиях метро и соседних станций\n",
@@ -56,19 +56,16 @@
     "                        metro_stations[m_lines[i]] = {}\n",
     "                    for j in range(len(m_lines)):\n",
     "                        metro_stations[m_lines[i]][m_lines[j]] = 0\n",
-    "    # Результат в metro_stations"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import sys\n",
-    "sys.path.append(FILES_DIR)\n",
-    "from classes_data import cl_data\n",
-    "from metro_matrix_full import METRO"
+    "\n",
+    "with open(os.path.join(FILES_DIR, \"metro_by_line.py\"), \"w\", encoding = \"utf-8\") as f:\n",
+    "    f.write(\"METRO = {}\".format(metro_stations))\n",
+    "    \n",
+    "# Далее на основе данных по линиям метро и смежным станциям строим глобальную матрицу\n",
+    "# применяем алгоритм Дейкстры для поиска оптимального пути между станциями\n",
+    "\n",
+    "script_path = os.path.join(FILES_DIR, \"Calculate_distances_matrix.py\")\n",
+    "%run  $script_path $FILES_DIR\n",
+    "# результат записываем в файл full_dist_matrix.py"
    ]
   },
   {
@@ -80,10 +77,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
+    "import sys\n",
+    "sys.path.append(FILES_DIR)\n",
+    "from full_dist_matrix import METRO\n",
+    "\n",
     "def get_neighbors(k, metro):\n",
     "    # Код получения соседних станций (включая саму станцию) по k и названию метро из словаря METRO\n",
     "    neighbours = {}\n",
@@ -97,22 +98,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
+    "from classes_data import cl_data\n",
+    "\n",
     "def knn(neighbors):\n",
     "    # В neighbors содержится словарь с данными по соседним станциям и самой станции\n",
-    "    # Подсчетываем количества людей для классов \"чай\" и \"кофе\"\n",
-    "    # Нужно проверить особый случай когда кол-во людей для \"чай\" и \"кофе\" одинаковое\n",
-    "    # тогда используем взвешенное голосование (для каждого класса [\"чай\" и \"кофе\"] подсчитываем сумму по всем \n",
-    "    # станциям 1/квадрат расстояния)\n",
+    "    # Изначально используется взвешенное голосование для \"чай\" и \"кофе\" в зависимости от расстояния до станции\n",
     "    votes_tea = 0\n",
     "    votes_coffee = 0\n",
     "    \n",
     "    for i in neighbors:\n",
     "        if i not in cl_data.keys():\n",
-    "            votes_tea, votes_cofee = 0, 0\n",
+    "            continue\n",
     "        else:\n",
     "            votes_tea += ((1000 - neighbors[i]) / 1000) * cl_data[i]['чай']\n",
     "            votes_coffee += ((1000 - neighbors[i]) / 1000) * cl_data[i]['кофе']\n",
@@ -122,7 +122,38 @@
     "    elif votes_tea < votes_coffee:\n",
     "        return(\"кофе\", votes_tea, votes_coffee)\n",
     "\n",
-    "    return (\"\", votes_tea, votes_coffee)"
+    "    return (\"\", votes_tea, votes_coffee)\n",
+    "\n",
+    "# Альтернативный алгоритм\n",
+    "def knn2(neighbors):\n",
+    "    # В neighbors содержится словарь с данными по соседним станциям и самой станции\n",
+    "    # Подсчетываем количества людей для классов \"чай\" и \"кофе\"\n",
+    "    # Нужно проверить особый случай когда кол-во людей для \"чай\" и \"кофе\" одинаковое\n",
+    "    # тогда используем взвешенное голосование (для каждого класса [\"чай\" и \"кофе\"] подсчитываем сумму по всем \n",
+    "    # станциям 1/квадрат расстояния)\n",
+    "    t=0\n",
+    "    c=0\n",
+    "    \n",
+    "    for i in neighbors:\n",
+    "        if i not in cl_data.keys():\n",
+    "            continue\n",
+    "        t += cl_data[i]['чай']\n",
+    "        c += cl_data[i]['кофе']\n",
+    "    if t == c:\n",
+    "        t=0\n",
+    "        c=0\n",
+    "        for i in neighbors:\n",
+    "            if i not in cl_data.keys():\n",
+    "                continue\n",
+    "            t += 1/((1+neighbors[i])**2) * cl_data[i]['чай']\n",
+    "            c += 1/((1+neighbors[i])**2) * cl_data[i]['кофе']\n",
+    "\n",
+    "    if t > c:\n",
+    "        return(\"чай\", t, c)\n",
+    "    elif t < c:\n",
+    "        return(\"кофе\", t, c)\n",
+    "\n",
+    "    return (\"\", t, c)"
    ]
   },
   {
@@ -145,18 +176,38 @@
       "Введите k:\n",
       "1\n",
       "Введите название метро:\n",
-      "Чертановская\n",
-      "По станции метро чертановская отсутствуют данные\n",
-      "Введите k:\n",
-      "комсомольская\n",
-      "Введите название метро:\n",
-      "в\n",
-      "Число k указано неправильно\n",
+      "Комсомольская\n",
+      "На станции метро комсомольская с k=1 пьют кофе (чай = 0, кофе = 1)\n",
       "Введите k:\n",
       "1\n",
       "Введите название метро:\n",
-      "комсомольская\n",
-      "На станции метро комсомольская с k=1 пьют кофе\n",
+      "Царицыно\n",
+      "На станции метро царицыно с k=1 пьют чай (чай = 3, кофе = 0)\n",
+      "Введите k:\n",
+      "100\n",
+      "Введите название метро:\n",
+      "проспект мира\n",
+      "На станции метро проспект мира с k=100 пьют кофе (чай = 0.12899548593542098, кофе = 0.4314714033761653)\n",
+      "Введите k:\n",
+      "4\n",
+      "Введите название метро:\n",
+      "Киевская\n",
+      "По станции метро киевская отсутствуют данные\n",
+      "Введите k:\n",
+      "сокол\n",
+      "Введите название метро:\n",
+      "3\n",
+      "Число k указано неправильно\n",
+      "Введите k:\n",
+      "3\n",
+      "Введите название метро:\n",
+      "сокол\n",
+      "На станции метро сокол с k=3 пьют кофе (чай = 2, кофе = 4)\n",
+      "Введите k:\n",
+      "1\n",
+      "Введите название метро:\n",
+      "сокол\n",
+      "На станции метро сокол с k=1 пьют кофе (чай = 2, кофе = 3)\n",
       "Введите k:\n"
      ]
     }
@@ -175,7 +226,7 @@
     "    if metro == '':\n",
     "        break\n",
     "    try:\n",
-    "        result = knn(get_neighbors(int(k), metro))\n",
+    "        result = knn2(get_neighbors(int(k), metro))\n",
     "    except KeyError:\n",
     "        print(\"Неправильно указана станция метро\")\n",
     "        continue\n",
@@ -187,19 +238,13 @@
     "        if result[1] == result[2] == 0:\n",
     "            print(\"По станции метро {0} отсутствуют данные\".format(metro))\n",
     "        else:\n",
-    "            print(\"На станции метро {0} c k={1} чай и кофе пьют поровну\".format(metro, k))\n",
+    "            print(\"На станции метро {0} c k={1} чай и кофе пьют поровну (чай = {2}, кофе = {3})\"\n",
+    "                  .format(metro, k, result[1], result[2]))\n",
     "    if result[0] == \"чай\":\n",
-    "        print(\"На станции метро {0} с k={1} пьют чай\".format(metro, k))\n",
+    "        print(\"На станции метро {0} с k={1} пьют чай (чай = {2}, кофе = {3})\".format(metro, k, result[1], result[2]))\n",
     "    if result[0] == \"кофе\":\n",
-    "        print(\"На станции метро {0} с k={1} пьют кофе\".format(metro, k))"
+    "        print(\"На станции метро {0} с k={1} пьют кофе (чай = {2}, кофе = {3})\".format(metro, k, result[1], result[2]))"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
